overflow fix

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 }
 
 .flashcard div{
-    display: flexbox;
+    display: flex;
     position: absolute;
     width: 100%;
     height: 90%;
@@ -46,6 +46,10 @@ body{
     border-radius: 5px;
     overflow: auto;
     scrollbar-width: none;
+    margin: 0 auto;
+    margin-top: 0;
+    align-items: center;
+    justify-content: center;
     background: linear-gradient(120deg, #b7b6c3, #554949);
 }
 
